--- a/digitala.html
+++ b/digitala.html
@@ -3,22 +3,22 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>For Digitala</title>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
     :root {
-      --pink-light: #fcd6e5;
-      --pink-deep: #f4a6c4;
-      --purple-light: #e3d1f7;
-      --purple-deep: #b88aff;
-      --blue-light: #c3d8f7;
-      --blue-deep: #6a88ff;
-      --white-glass: rgba(255, 255, 255, 0.3);
-      --text-dark: #2a2a2a;
-      --shadow-glow-pink: rgba(244, 166, 196, 0.3);
-      --shadow-glow-purple: rgba(184, 138, 255, 0.3);
-      --shadow-glow-blue: rgba(106, 136, 255, 0.3);
+      --hot-pink: #ff007f;
+      --bright-purple: #9b30ff;
+      --vibrant-blue: #007bff;
+      --electric-orange: #ff6f00;
+      --sunshine-yellow: #ffea00;
+      --deep-blue: #0033cc;
+
+      --text-light: #fff;
+      --shadow-hot-pink: rgba(255, 0, 127, 0.6);
+      --shadow-purple: rgba(155, 48, 255, 0.5);
+      --shadow-blue: rgba(0, 123, 255, 0.5);
     }
 
     * {
@@ -27,20 +27,18 @@
       box-sizing: border-box;
     }
 
-    html,
     body {
-      height: 100%;
-      scroll-behavior: smooth;
       font-family: 'Manrope', sans-serif;
-      background: linear-gradient(135deg, var(--pink-light), var(--purple-light), var(--blue-light));
-      background-size: 400% 400%;
-      animation: gradientShift 15s ease infinite;
-      overflow-x: hidden;
-      color: var(--text-dark);
+      background: linear-gradient(135deg, var(--hot-pink), var(--bright-purple), var(--vibrant-blue), var(--electric-orange), var(--sunshine-yellow), var(--deep-blue));
+      background-size: 1200% 1200%;
+      animation: backgroundShift 25s ease infinite;
+      color: var(--text-light);
       padding: 60px 20px;
+      overflow-x: hidden;
+      min-height: 100vh;
     }
 
-    @keyframes gradientShift {
+    @keyframes backgroundShift {
       0% {
         background-position: 0% 50%;
       }
@@ -57,7 +55,7 @@
     header {
       text-align: center;
       margin-bottom: 80px;
-      animation: fadeInUp 1.2s ease;
+      animation: fadeInUp 1.2s ease forwards;
     }
 
     .logo-title {
@@ -69,154 +67,151 @@
     }
 
     .logo {
-      width: 80px;
-      height: 80px;
+      width: 90px;
+      height: 90px;
       border-radius: 50%;
       object-fit: cover;
-      box-shadow: 0 4px 12px var(--shadow-glow-pink);
-      border: 3px solid white;
+      border: 4px solid var(--text-light);
+      box-shadow: 0 0 20px var(--shadow-hot-pink);
+      transition: transform 0.3s ease;
+    }
+
+    .logo:hover {
+      transform: rotate(15deg) scale(1.1);
+      box-shadow: 0 0 35px var(--shadow-hot-pink);
     }
 
     h1 {
-      font-size: 3.5rem;
-      font-weight: 800;
-      background: linear-gradient(90deg, var(--pink-deep), var(--purple-deep));
+      font-size: 4rem;
+      font-weight: 900;
+      background: linear-gradient(90deg, var(--hot-pink), var(--bright-purple), var(--vibrant-blue));
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
+      animation: textGlow 3s ease-in-out infinite alternate;
+      cursor: default;
     }
 
     header p {
-      font-size: 1.2rem;
-      margin-top: 10px;
-      opacity: 0.75;
+      font-size: 1.4rem;
+      margin-top: 12px;
+      font-weight: 600;
+      text-shadow: 0 0 8px var(--shadow-hot-pink);
+      opacity: 0.9;
+      cursor: default;
     }
 
-    /* ==== Services ==== */
+    /* Services */
     .services {
       max-width: 1200px;
       margin: 0 auto;
-      animation: fadeInUp 1.4s ease;
+      animation: fadeInUp 1.6s ease forwards;
     }
 
     .services h2 {
       text-align: center;
-      font-size: 2.8rem;
-      color: var(--purple-deep);
-      margin-bottom: 50px;
+      font-size: 3rem;
+      color: var(--sunshine-yellow);
+      text-shadow: 0 0 10px var(--electric-orange);
+      margin-bottom: 60px;
+      letter-spacing: 2px;
+      font-weight: 800;
     }
 
     .service-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
       gap: 40px;
     }
 
     .service-card {
-      background: var(--white-glass);
-      backdrop-filter: blur(16px);
-      border-radius: 20px;
-      padding: 30px;
-      border: 1px solid rgba(255, 255, 255, 0.5);
-      box-shadow: 0 8px 24px var(--shadow-glow-pink);
+      background: linear-gradient(135deg, var(--hot-pink), var(--bright-purple));
+      padding: 35px 30px;
+      border-radius: 25px;
+      box-shadow: 0 12px 25px var(--shadow-hot-pink);
+      color: var(--text-light);
       position: relative;
-      transition: 0.3s ease;
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
+      cursor: default;
       overflow: hidden;
     }
 
-    .service-card::before {
-      content: '';
-      position: absolute;
-      top: -50%;
-      left: -50%;
-      width: 200%;
-      height: 200%;
-      background: radial-gradient(circle, rgba(255, 255, 255, 0.08) 0%, transparent 60%);
-      animation: rotateLight 8s linear infinite;
-    }
-
     .service-card:hover {
-      transform: scale(1.03);
-      box-shadow: 0 16px 36px var(--shadow-glow-purple);
+      transform: scale(1.07);
+      box-shadow: 0 18px 45px var(--shadow-purple);
     }
 
     .service-card h3 {
-      font-size: 1.6rem;
-      color: var(--purple-deep);
-      margin-bottom: 15px;
+      font-size: 1.9rem;
+      margin-bottom: 18px;
+      letter-spacing: 0.8px;
+      text-shadow: 0 0 10px var(--shadow-hot-pink);
+      font-weight: 700;
     }
 
     .service-card p {
-      font-size: 1rem;
-      line-height: 1.6;
-      color: #333;
+      font-size: 1.1rem;
+      line-height: 1.7;
+      text-shadow: 0 0 6px var(--shadow-hot-pink);
     }
 
-    /* ==== Contact ==== */
+    /* Contact */
     .contact {
       margin-top: 100px;
       text-align: center;
-      animation: fadeInUp 1.6s ease;
+      animation: fadeInUp 1.8s ease forwards;
     }
 
     .contact h2 {
-      font-size: 2.4rem;
-      color: var(--purple-deep);
-      margin-bottom: 30px;
+      font-size: 2.8rem;
+      color: var(--vibrant-blue);
+      text-shadow: 0 0 10px var(--shadow-blue);
+      margin-bottom: 35px;
+      font-weight: 800;
+      letter-spacing: 1.5px;
     }
 
     .contact-links {
       display: flex;
-      flex-wrap: wrap;
       justify-content: center;
-      gap: 20px;
+      gap: 30px;
+      flex-wrap: wrap;
     }
 
     .contact-links a {
-      background: var(--purple-deep);
-      color: white;
+      background: var(--electric-orange);
+      color: var(--text-light);
+      padding: 16px 40px;
+      border-radius: 50px;
+      font-weight: 700;
+      font-size: 1.2rem;
       text-decoration: none;
-      padding: 14px 28px;
-      border-radius: 40px;
-      font-weight: 600;
-      letter-spacing: 0.4px;
+      box-shadow: 0 6px 15px rgba(255, 111, 0, 0.6);
+      transition: background 0.3s ease, box-shadow 0.3s ease;
       position: relative;
       overflow: hidden;
-      transition: all 0.3s ease;
     }
 
-    .contact-links a::after {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 0%;
-      left: 0;
-      bottom: 0;
-      background: var(--blue-deep);
-      z-index: 0;
-      transition: 0.3s ease;
-    }
-
-    .contact-links a:hover::after {
-      height: 100%;
-    }
-
-    .contact-links a span {
-      position: relative;
-      z-index: 1;
+    .contact-links a:hover {
+      background: var(--sunshine-yellow);
+      color: var(--hot-pink);
+      box-shadow: 0 8px 25px rgba(255, 234, 0, 0.9);
     }
 
     footer {
-      margin-top: 80px;
+      margin-top: 100px;
       text-align: center;
-      font-size: 0.9rem;
-      color: #666;
+      font-size: 1rem;
+      color: var(--sunshine-yellow);
+      text-shadow: 0 0 7px var(--electric-orange);
+      font-weight: 600;
+      letter-spacing: 1px;
     }
 
     /* Animations */
     @keyframes fadeInUp {
       from {
         opacity: 0;
-        transform: translateY(30px);
+        transform: translateY(40px);
       }
 
       to {
@@ -225,37 +220,48 @@
       }
     }
 
-    @keyframes rotateLight {
+    @keyframes textGlow {
       0% {
-        transform: rotate(0deg);
+        text-shadow: 0 0 15px var(--hot-pink), 0 0 25px var(--hot-pink);
       }
 
       100% {
-        transform: rotate(360deg);
+        text-shadow: 0 0 35px var(--bright-purple), 0 0 50px var(--vibrant-blue);
       }
     }
 
-    /* Mobile Styles */
+    /* Responsive */
     @media (max-width: 600px) {
       h1 {
-        font-size: 2.5rem;
-      }
-
-      .logo-title {
-        flex-direction: column;
-        text-align: center;
+        font-size: 2.8rem;
       }
 
       .logo {
         width: 70px;
         height: 70px;
       }
+
+      .service-grid {
+        grid-template-columns: 1fr;
+      }
+
+      .services h2 {
+        font-size: 2.4rem;
+      }
+
+      .contact h2 {
+        font-size: 2rem;
+      }
+
+      .contact-links a {
+        padding: 14px 32px;
+        font-size: 1rem;
+      }
     }
   </style>
 </head>
 
 <body>
-
   <!-- Header -->
   <header>
     <div class="logo-title">
@@ -274,29 +280,28 @@
       <div class="service-card">
         <h3>Graphic Design</h3>
         <p>
-          Social Media (Reels, Posts, Stories), Visual Identity (Logo, Mockups), Cards
-          (Invitations, Business), Advertisements, & Custom Design
+          Social Media (Reels, Posts, Stories), Visual Identity (Logo, Mockups), Cards (Invitations,
+          Business), Advertisements, & Custom Design
         </p>
       </div>
       <div class="service-card">
         <h3>Web Development</h3>
         <p>
-          Building web pages, improving user interfaces for websites, and modifying and
-          updating existing websites.
+          Building web pages, improving user interfaces for websites, and modifying and updating existing
+          websites.
         </p>
       </div>
       <div class="service-card">
         <h3>Photoshop & Video Editing</h3>
         <p>
-          Professional photo editing (for characters, products...), promotional image
-          design, video editing.
+          Professional photo editing (for characters, products...), promotional image design, video editing.
         </p>
       </div>
       <div class="service-card">
         <h3>Extra Services</h3>
         <p>
-          Create CV/Resume and Cover Letter, design portfolio, implement projects and
-          presentations (Microsoft Office).
+          Create CV/Resume and Cover Letter, design portfolio, implement projects and presentations (Microsoft
+          Office).
         </p>
       </div>
     </div>
@@ -306,8 +311,8 @@
   <section class="contact">
     <h2>Get in Touch</h2>
     <div class="contact-links">
-      <a href="https://wa.me/71732045" target="_blank"><span>WhatsApp</span></a>
-      <a href="https://www.instagram.com/4.digitala" target="_blank"><span>Instagram</span></a>
+      <a href="https://wa.me/71732045" target="_blank">WhatsApp</a>
+      <a href="https://www.instagram.com/4.digitala" target="_blank">Instagram</a>
     </div>
   </section>
 
