--- a/digitala.html
+++ b/digitala.html
@@ -691,6 +691,7 @@
             <a href="#services" data-tab="services">Services</a>
             <a href="#portfolio" data-tab="portfolio">Highlights</a>
             <a href="#graphics" data-tab="graphics">Portfolio</a>
+            <a href="#feedbacks" data-tab="feedbacks">Feedbacks</a>
             <a href="#contacts" data-tab="contacts">Contact</a>
         </nav>
     </header>
@@ -710,70 +711,100 @@
                     My double major in <b>English Literature</b> and <b>Management Information Systems</b> allows me to
                     bridge creative vision and advanced tech.<br><br>
                     I approach every project as a collaboration, driven by curiosity, precision, and ambition.<br><br>
-                    <span style="font-weight:700;">Dream big. Design bold. Deliver excellence.</span>
+                    <span style="font-weight:700;">A Star Made Brand.</span>
                 </p>
             </div>
         </div>
     </section>
     <!-- SERVICES SECTION (With 6 WhatsApp Clickable Cards) -->
+    <!-- Replace the original SERVICES SECTION with this creative version -->
+
     <section class="tab-section" id="services">
         <div class="services-container">
             <h2 class="section-title"
                 style="font-family:'Montserrat', 'Inter', Arial, sans-serif; font-size:2rem; color:#161616; margin-bottom:1.3rem; letter-spacing:.04em;">
                 Services</h2>
-            <div class="services-grid">
+            <div class="services-grid creative-services">
+                <!-- Example images used below, replace URLs as needed -->
+                <a href="https://wa.me/71732045?text=Hi%20Tala!%20I'm%20interested%20in%20Creative%20Copywriting.%20Can%20you%20help%20me%20with%20content%20for%20my%20brand?"
+                    target="_blank" rel="noopener">
+                    <div class="service-card creative-card"
+                        style="background-image:url('https://images.unsplash.com/photo-1519125323398-675f0ddb6308?auto=format&fit=crop&w=600&q=80');">
+                        <div class="service-glass">
+                            <div class="service-title">UI/UX Design</div>
+                            <div class="service-desc">I design intuitive and modern user experiences that blend
+                                creativity
+                                with functionality. From wireframes to final interfaces, I ensure every detail is
+                                crafted to
+                                engage users and deliver seamless digital journeys.</div>
+                        </div>
+                    </div>
+                </a>
                 <a href="https://wa.me/71732045?text=Hi%20Tala!%20I'm%20interested%20in%20Branding%20%26%20Identity%20services.%20Can%20we%20discuss%20my%20project?"
                     target="_blank" rel="noopener">
-                    <div class="service-card">
-                        <div style="font-size:2.3rem; margin-bottom:.8em;">🎨</div>
-                        <div class="service-title">Branding & Identity</div>
-                        <div class="service-desc">Crafting unique brand identities, logos, and visual systems that tell
-                            your story and connect with audiences.</div>
+                    <div class="service-card creative-card"
+                        style="background-image:url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80');">
+                        <div class="service-glass">
+                            <div class="service-title">Marketing & Branding</div>
+                            <div class="service-desc">I help businesses build strong brand identities and marketing
+                                strategies that connect with the right audience. From visual identity to creative
+                                campaigns,
+                                I make sure your brand stands out and leaves a lasting impact.</div>
+                        </div>
                     </div>
                 </a>
                 <a href="https://wa.me/71732045?text=Hi%20Tala!%20I'm%20interested%20in%20Web%20Design%20%26%20Development.%20Can%20you%20help%20me%20build%20a%20website?"
                     target="_blank" rel="noopener">
-                    <div class="service-card">
-                        <div style="font-size:2.3rem; margin-bottom:.8em;">🖥️</div>
-                        <div class="service-title">Web Design & Development</div>
-                        <div class="service-desc">Building modern, responsive websites and landing pages that convert
-                            visitors into loyal customers.</div>
+                    <div class="service-card creative-card"
+                        style="background-image:url('https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=600&q=80');">
+                        <div class="service-glass">
+                            <div class="service-title">Social Media Management</div>
+                            <div class="service-desc">I create and manage content that builds engagement, grows
+                                communities,
+                                and strengthens your brand presence. From strategy to daily execution, I make sure your
+                                social media connects with the right audience and drives results.</div>
+                        </div>
                     </div>
                 </a>
                 <a href="https://wa.me/71732045?text=Hi%20Tala!%20I'm%20interested%20in%20Social%20Media%20Management.%20Can%20we%20talk%20about%20my%20online%20presence?"
                     target="_blank" rel="noopener">
-                    <div class="service-card">
-                        <div style="font-size:2.3rem; margin-bottom:.8em;">📱</div>
-                        <div class="service-title">Social Media Management</div>
-                        <div class="service-desc">Creating scroll-stopping content, managing accounts, and developing
-                            strategies that grow your online presence.</div>
-                    </div>
-                </a>
-                <a href="https://wa.me/71732045?text=Hi%20Tala!%20I'm%20interested%20in%20Creative%20Copywriting.%20Can%20you%20help%20me%20with%20content%20for%20my%20brand?"
-                    target="_blank" rel="noopener">
-                    <div class="service-card">
-                        <div style="font-size:2.3rem; margin-bottom:.8em;">✍️</div>
-                        <div class="service-title">Creative Copywriting</div>
-                        <div class="service-desc">Writing captivating copy for websites, campaigns, and brands that
-                            inspires action and builds trust.</div>
+                    <div class="service-card creative-card"
+                        style="background-image:url('https://images.unsplash.com/photo-1498050108023-c5249f4df085?auto=format&fit=crop&w=600&q=80');">
+                        <div class="service-glass">
+                            <div class="service-title">Content Writing & Creation</div>
+                            <div class="service-desc">I craft compelling content that captures attention and tells your
+                                brand’s story with clarity and impact. From engaging copy to creative visuals, I make
+                                sure
+                                your message resonates and inspires action.</div>
+                        </div>
                     </div>
                 </a>
                 <a href="https://wa.me/71732045?text=Hi%20Tala!%20I'm%20interested%20in%20Digital%20Strategy.%20Can%20you%20guide%20me%20on%20how%20to%20grow%20my%20business%20online?"
                     target="_blank" rel="noopener">
-                    <div class="service-card">
-                        <div style="font-size:2.3rem; margin-bottom:.8em;">🔍</div>
-                        <div class="service-title">Digital Strategy</div>
-                        <div class="service-desc">Developing and executing tailored digital strategies to achieve your
-                            business goals and maximize impact.</div>
+                    <div class="service-card creative-card"
+                        style="background-image:url('https://images.unsplash.com/photo-1465101178521-c1a2a0f28acf?auto=format&fit=crop&w=600&q=80');">
+                        <div class="service-glass">
+                            <div class="service-title">Frontend Development</div>
+                            <div class="service-desc">I build responsive and visually appealing websites that combine
+                                design
+                                with functionality. With clean code and modern layouts, I ensure your site delivers a
+                                seamless experience across all devices.</div>
+                        </div>
                     </div>
                 </a>
                 <a href="https://wa.me/71732045?text=Hi%20Tala!%20I'm%20interested%20in%20Graphic%20Design.%20Can%20you%20create%20visuals%20for%20my%20brand%20or%20project?"
                     target="_blank" rel="noopener">
-                    <div class="service-card">
-                        <div style="font-size:2.3rem; margin-bottom:.8em;">🖌️</div>
-                        <div class="service-title">Graphic Design</div>
-                        <div class="service-desc">Designing eye-catching graphics, social media posts, flyers, and more
-                            to visually elevate your brand.</div>
+                    <div class="service-card creative-card"
+                        style="background-image:url('https://images.unsplash.com/photo-1503676382389-4809596d5290?auto=format&fit=crop&w=600&q=80');">
+                        <div class="service-glass">
+                            <div class="service-title">Extra Services</div>
+                            <div class="service-desc">Alongside my core services, I offer tailored support with CVs,
+                                resumes, cover letters, portfolios, presentations, PDFs, academic assignments, and
+                                custom
+                                design requests. Each piece is crafted with professionalism and creativity to highlight
+                                your
+                                strengths and make a lasting impression.</div>
+                        </div>
                     </div>
                 </a>
             </div>
@@ -782,6 +813,77 @@
             </div>
         </div>
     </section>
+    <style>
+        .creative-services .creative-card {
+            position: relative;
+            min-height: 340px;
+            background-size: cover;
+            background-position: center;
+            overflow: hidden;
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+            box-shadow: 0 8px 32px #16161633;
+            border-radius: 18px;
+            border: none;
+            transition: box-shadow .18s, transform .18s;
+        }
+
+        .creative-services .creative-card:hover {
+            box-shadow: 0 12px 36px #16161655;
+            transform: scale(1.025) translateY(-5px);
+        }
+
+        .creative-services .service-glass {
+            width: 96%;
+            margin: 0 2% 3% 2%;
+            background: rgba(247, 247, 247, 0.70);
+            backdrop-filter: blur(14px) saturate(1.3);
+            box-shadow: 0 2px 22px #16161622, 0 0 0 1.5px #eee6;
+            border-radius: 16px;
+            padding: 1.3rem 1.1rem 1.2rem 1.1rem;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            transition: background .3s, box-shadow .2s;
+            position: relative;
+        }
+
+        .creative-services .service-title {
+            color: #161616;
+            font-weight: 700;
+            font-size: 1.3rem;
+            margin-bottom: .7em;
+            letter-spacing: .04em;
+            text-shadow: 0 1px 12px #fff9;
+        }
+
+        .creative-services .service-desc {
+            color: #222;
+            font-size: 1.07rem;
+            font-weight: 500;
+            text-shadow: 0 1px 12px #fff8;
+        }
+
+        @media (max-width:700px) {
+            .creative-services .creative-card {
+                min-height: 180px;
+            }
+
+            .creative-services .service-glass {
+                padding: 0.7rem 0.5rem 0.8rem 0.5rem;
+                border-radius: 10px;
+            }
+
+            .creative-services .service-title {
+                font-size: 1.05rem;
+            }
+
+            .creative-services .service-desc {
+                font-size: 0.96rem;
+            }
+        }
+    </style>
     <!-- PORTFOLIO -->
     <section class="tab-section" id="portfolio">
         <h2 class="section-title">Highlights</h2>
@@ -819,6 +921,147 @@
                     </div>
                 </a>
     </section>
+    <!-- FEEDBACKS SECTION -->
+    <section class="tab-section" id="feedbacks">
+        <div class="feedbacks-container">
+            <h2 class="section-title"
+                style="font-family:'Montserrat', 'Inter', Arial, sans-serif; font-size:2rem; color:#161616; margin-bottom:1.3rem; letter-spacing:.04em;">
+                Feedbacks</h2>
+            <div class="feedbacks-grid">
+                <!-- Feedback Card Example -->
+                <div class="feedback-card">
+                    <div class="feedback-header">
+                        <img src="https://imgur.com/your-client-photo.jpg" alt="Client Photo" class="feedback-photo"
+                            loading="lazy" />
+                        <div>
+                            <div class="feedback-name">Client Name</div>
+                            <div class="feedback-role">Role / Company</div>
+                        </div>
+                    </div>
+                    <div class="feedback-content">
+                        <blockquote>
+                            “Tala is a true digital creative. Her work transformed our brand and her collaborative
+                            spirit made the process inspiring. Highly recommend!”
+                        </blockquote>
+                    </div>
+                </div>
+                <!-- More Feedback Cards: Copy/Paste and edit -->
+                <div class="feedback-card">
+                    <div class="feedback-header">
+                        <img src="https://imgur.com/your-client2-photo.jpg" alt="Client Photo" class="feedback-photo"
+                            loading="lazy" />
+                        <div>
+                            <div class="feedback-name">Another Client</div>
+                            <div class="feedback-role">Founder, StartupX</div>
+                        </div>
+                    </div>
+                    <div class="feedback-content">
+                        <blockquote>
+                            “Exceptional design and strategy. Tala helped us launch with confidence and style. Will work
+                            with her again!”
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <style>
+        .feedbacks-container {
+            max-width: 950px;
+            margin: 0 auto;
+            background: #fff;
+            border-radius: var(--radius-card);
+            box-shadow: 0 4px 20px #16161633;
+            padding: 2.1rem 2.3rem;
+        }
+
+        .feedbacks-grid {
+            display: grid;
+            gap: 2rem;
+            grid-template-columns: 1fr;
+        }
+
+        .feedback-card {
+            background: var(--gray);
+            border-radius: 14px;
+            box-shadow: 0 2px 12px #16161622;
+            border: 1.2px solid #e5e5e5;
+            padding: 2rem 1.5rem;
+            display: flex;
+            flex-direction: column;
+            animation: fadeIn .4s;
+        }
+
+        .feedback-header {
+            display: flex;
+            align-items: center;
+            gap: 1.2rem;
+            margin-bottom: 1.1rem;
+        }
+
+        .feedback-photo {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 2px solid #e0e0e0;
+            box-shadow: 0 2px 10px #16161622;
+            background: var(--gray);
+        }
+
+        .feedback-name {
+            font-weight: 700;
+            font-size: 1.1rem;
+            color: #161616;
+            letter-spacing: .02em;
+        }
+
+        .feedback-role {
+            font-size: 1rem;
+            color: #555;
+            font-weight: 500;
+            margin-top: 0.1em;
+        }
+
+        .feedback-content blockquote {
+            font-size: 1.07rem;
+            color: #232323;
+            font-weight: 500;
+            background: var(--white);
+            padding: 1.1rem 1rem;
+            border-radius: 10px;
+            border-left: 4px solid var(--black);
+            margin: 0;
+        }
+
+        @media (max-width: 700px) {
+            .feedbacks-container {
+                padding: 1.1rem 0.5rem;
+            }
+
+            .feedback-photo {
+                width: 40px;
+                height: 40px;
+            }
+
+            .feedback-card {
+                padding: 1.1rem 0.7rem;
+            }
+
+            .feedback-name {
+                font-size: 1rem;
+            }
+
+            .feedback-role {
+                font-size: 0.95rem;
+            }
+
+            .feedback-content blockquote {
+                font-size: 1rem;
+                padding: 0.7rem 0.6rem;
+            }
+        }
+    </style>
     <!-- CONTACT -->
     <section class="tab-section" id="contacts">
         <h2 class="section-title">Contact</h2>
@@ -839,6 +1082,11 @@
                     <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/instagram.svg" alt="Instagram"
                         loading="lazy" />
                     Instagram
+                </a>
+                <a href="https://www.instagram.com/dt,digitala" target="_blank" rel="noopener">
+                    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/instagram.svg" alt="Instagram"
+                        loading="lazy" />
+                    Instagram 2
                 </a>
                 <a href="https://www.linkedin.com/in/tala-chibli-89a8632ab" target="_blank" rel="noopener">
                     <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/linkedin.svg" alt="LinkedIn"
